# klypup-research-dashboard

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a0b99519c26_initial_schema.py
backend/app/: main.py
backend/app/agents/: orchestrator.py
backend/app/agents/tools/: market_data.py  news_search.py
backend/app/api/: auth.py  orgs.py  reports.py  research.py  watchlist.py
backend/app/core/: config.py  database.py  security.py  tenancy.py
backend/app/models/: __init__.py  document.py  invite_code.py  organization.py  report_source.py  research_report.py  user.py  watchlist_item.py
backend/app/rag/: ingest.py  retriever.py
backend/app/schemas/: auth.py  org.py  report.py  research.py  watchlist.py
backend/app/services/: auth_service.py  org_service.py  report_service.py  watchlist_service.py
backend/data/filings/: amd_sample_filing.txt  nvda_sample_filing.txt  tsla_sample_filing.txt
backend/scripts/: manual_check_market_data.py  manual_check_news_search.py  manual_check_orchestrator.py  run_ingestion.py  seed_demo_data.py  seed_documents.py
backend/tests/: conftest.py  test_api_orgs.py  test_api_reports.py  test_api_watchlist.py  test_auth_service.py  test_market_data.py  test_news_search.py  test_orchestrator.py  test_rag_ingest.py  test_rag_retriever.py  test_tenancy.py
docs/: PDD.md  TDD.md
frontend/: .env.example  .gitignore
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/api/orgs/invite-codes/: route.ts
frontend/src/app/api/reports/: route.ts
frontend/src/app/api/reports/[id]/: route.ts
frontend/src/app/api/research/: route.ts
frontend/src/app/api/watchlist/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: AuthShell.tsx  LoginForm.tsx
frontend/src/components/dashboard/: DashboardNav.tsx  InviteTeammate.tsx  LogoutButton.tsx  RecentReports.tsx  ReportActions.tsx  TeamList.tsx  WatchlistStrip.tsx
frontend/src/components/research/: AddToWatchlistButton.tsx  AgentTrace.tsx  CompanyCards.tsx  ComparisonTable.tsx  NewsList.tsx  PerformanceChart.tsx  QueryForm.tsx  ResearchConsole.tsx  ResultsPanel.tsx  RiskSummary.tsx  SaveReportButton.tsx  StructuredResultView.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  ErrorBanner.tsx  Spinner.tsx  TextField.tsx
frontend/src/lib/: api-error.ts  auth-cookie.ts  backend.ts  pivotComparison.ts  server-auth.ts  types.ts
(+2 files in other folders)
