[project]
name = "klypup-backend"
version = "0.1.0"
description = "Klypup Investment Research Dashboard - Backend"
authors = [
    {name = "Klypup Dev"}
]
# <3.14 (not <4.0, unlike main) because litellm caps at <3.14 as of this
# writing — branch-specific, since this branch is what depends on litellm.
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "chromadb (>=1.5.9,<2.0.0)",
    "email-validator (>=2.0,<3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "litellm (>=1.91.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# This is an application (a FastAPI service run via `poetry run uvicorn
# app.main:app`), not a redistributable library — there's no
# `klypup_backend/` package for Poetry to build and install into the venv
# under the project's own name, only `app/`. Without this, `poetry
# install` fails on a genuinely fresh clone/venv with "No file/folder
# found for package klypup-backend" while trying to install the project
# as its own dependency; package-mode = false tells Poetry to only manage
# the virtualenv/dependencies, never try to build+install the project
# itself.
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]
